# bookmarks

./: .flake8  .gitignore  Dockerfile  MANIFEST.in  README.md  curl.txt  ecs-task.json  pyproject.toml  requirements.txt  start.py  test.sql
.github/workflows/: build-test.yml  ecs.yaml  lint-test.yaml
api/: api.yaml  redoc-static.html  v1.yaml
bookmarks/: __init__.py  auth.py  bookmark_types.py  bookmarks.py  collections.py  db.py  resources.py  schema.sql  tags.py  types.py  users.py
bookmarks/api/: bookmark_types.py  bookmarks.py  collections.py  tags.py  users.py
bookmarks/api/spec/: api.yaml
bookmarks/blueprints/: bookmark_types.py  bookmarks.py  collections.py  tags.py  users.py
bookmarks/core/: bookmark.py  bookmark_type.py  collection.py  tag.py  user.py  utils.py
bookmarks/model/: bookmark.py  bookmark_type.py  tag.py  user.py
cli/: main.py
flaskr/: __init__.py  bookmark_types.py  bookmarks.py  collections.py  core.py  db.py  resources.py  schema.sql  tags.py  topics.py
flaskr/core/: bookmark.py  bookmark_type.py  collection.py  tag.py  topic.py  utils.py
model/: types.py
tests/: conftest.py  data.sql  headers.py  test_bookmarks.py  test_collections.py  test_core_bookmark.py  test_core_tag.py  test_core_topic.py  test_core_type.py  test_db.py  test_factory.py  test_resources.py  test_tags.py  test_topics.py  test_types.py  test_users.py
tests/scenario/: test_basic.py
